--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,15 @@
+body {
+    cursor: url('../assets/cursor/yugicursor.png'), default;
+}
+
+button,
+a,
+img:hover,
+button:hover,
+a:hover{
+    cursor: url('../assets/cursor/yamiyugicursorGLOW.png'), default;
+}
+
 .bg-video {
     position: absolute;
     z-index: -2;
@@ -117,9 +129,10 @@
 .card-infield {
     height: 11.2rem;
     width: 8rem;
-
+    border: 1px solid #fff;
     border-radius: 8px;
 }
+
 
 .card{
     transition: transform 0.2s;
@@ -127,4 +140,9 @@
 
 .card:hover{
     transform: scale(1.2);
+}
+
+
+.debug{
+    border: 1px solid red;
 }
